Fix long time broken CSS

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
   background: #272425;
 }
 
-/* line 2, ../scss/reset/_headings.scss */
+/* line 1, ../scss/reset/_headings.scss */
 h1, h2, h3,
 h4, h5, h6 {
   color: #fcfcfc;
@@ -61,7 +61,7 @@ a {
 }
 /* line 6, ../scss/reset/_links.scss */
 a:hover {
-  color: white;
+  color: #fff;
   text-shadow: 0px 0px 10px #fcfcfc;
 }
 /* line 11, ../scss/reset/_links.scss */
@@ -358,11 +358,11 @@ hr {
   line-height: 26px;
   text-transform: uppercase;
 }
-/* line 16, ../scss/sections/_navigation.scss */
+/* line 15, ../scss/sections/_navigation.scss */
 #nav a:hover,
 #nav li.active a {
   text-shadow: none;
-  background: url('../img/arrow_nav.png?1371473810') 50% 94% no-repeat;
+  background: url('../img/arrow_nav.png?1615059144') 50% 94% no-repeat;
 }
 
 /* line 1, ../scss/sections/_banner.scss */
@@ -409,7 +409,7 @@ hr {
 /* line 1, ../scss/elements/_box.scss */
 .box {
   margin-bottom: 20px;
-  background: black;
+  background: #000;
 }
 /* line 5, ../scss/elements/_box.scss */
 .box .heading {
@@ -419,7 +419,7 @@ hr {
 /* line 9, ../scss/elements/_box.scss */
 .box .heading * {
   margin: 0;
-  color: black;
+  color: #000;
 }
 /* line 15, ../scss/elements/_box.scss */
 .box .content {
@@ -458,14 +458,14 @@ hr {
   text-align: right;
 }
 
-/* line 2, ../scss/pages/testimonials.scss */
+/* line 5, ../scss/pages/testimonials.scss */
 .client-work img {
   display: block;
   float: left;
   width: 22.85%;
   margin: 0 20px 20px 0;
 }
-/* line 8, ../scss/pages/testimonials.scss */
+/* line 11, ../scss/pages/testimonials.scss */
 .client-work img:nth-child(4n+4) {
   margin-right: 0;
 }
